# ros2_introduction

./: .gitignore
src/akilli_radar/: package.xml  setup.cfg  setup.py
src/akilli_radar/akilli_radar/: radar_yayinci.py  sofor_dinleyici.py
src/benim_otonom_robotum/: package.xml  setup.cfg  setup.py
src/benim_otonom_robotum/benim_otonom_robotum/: akilli_sofor.py
src/gelismis_surus/: package.xml  setup.cfg  setup.py
src/gelismis_surus/gelismis_surus/: coklu_radar.py  karar_merkezi.py
src/gelismis_surus/launch/: sistemi_baslat.launch.py
